# Terreate

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt  flake.nix
.github/workflows/: cmake-multi-platform.yml
impl/: CMakeLists.txt  context.cpp  renderer.cpp  transform.cpp
impl/audio/: ALhelper.cpp  CMakeLists.txt  buffer.cpp  context.cpp  source.cpp
impl/common/: CMakeLists.txt  clock.cpp  executor.cpp  uuid.cpp
impl/component/: CMakeLists.txt  controller.cpp  mesh.cpp  transform.cpp
impl/core/: CMakeLists.txt  bufferchain.cpp  command.cpp  context.cpp  debugger.cpp  device.cpp  display.cpp  entity.cpp  executor.cpp  framebuffer.cpp  object.cpp  pipeline.cpp  queue.cpp  renderpass.cpp  surface.cpp  swapchain.cpp  sync.cpp  uuid.cpp  window.cpp  winevent.cpp
impl/graphic/: CMakeLists.txt  GLdefs.cpp  buffer.cpp  compute.cpp  converter.cpp  font.cpp  joystick.cpp  screen.cpp  shader.cpp  text.cpp  texture.cpp  window.cpp
impl/io/: CMakeLists.txt  animation.cpp  image.cpp
impl/module/: opengl.cpp  sdl.cpp
impl/module/common/: CMakeLists.txt  clock.cpp  executor.cpp  uuid.cpp
impl/module/component/: CMakeLists.txt  transform.cpp
impl/module/core/: CMakeLists.txt  component.cpp  context.cpp  entity.cpp
impl/module/opengl/: CMakeLists.txt  buffer.cpp  compute.cpp  converter.cpp  cursor.cpp  font.cpp  icon.cpp  joystick.cpp  mouse.cpp  object.cpp  screen.cpp  shader.cpp  text.cpp  texture.cpp  window.cpp  winhelper.cpp
impl/module/resource/: CMakeLists.txt  mesh.cpp
impl/module/sdl/: CMakeLists.txt  audio.cpp  camera.cpp  cursor.cpp  event.cpp  gamepad.cpp  image.cpp  joystick.cpp  mouse.cpp  registry.cpp  vulkan.cpp  window.cpp  winhelper.cpp
impl/opengl/: CMakeLists.txt  buffer.cpp  compute.cpp  converter.cpp  font.cpp  gl.cpp  screen.cpp  shader.cpp  texture.cpp
impl/resource/: CMakeLists.txt  mesh.cpp
impl/sdl/: CMakeLists.txt  audio.cpp  camera.cpp  event.cpp  gamepad.cpp  image.cpp  joystick.cpp  mouse.cpp  registry.cpp  sdl.cpp  window.cpp  winhelper.cpp
impl/util/: CMakeLists.txt  frame.cpp  uuid.cpp
impl/vulkan/: CMakeLists.txt  command.cpp  device.cpp  framebuffer.cpp  pipeline.cpp  queue.cpp  renderpass.cpp  surface.cpp  swapchain.cpp  sync.cpp  window.cpp  winevent.cpp
impls/: CMakeLists.txt  context.cpp  executor.cpp  font.cpp  primitive.cpp  resource.cpp  scene.cpp  uuid.cpp
impls/audio/: CMakeLists.txt
impls/core/: CMakeLists.txt  api.cpp  context.cpp  device.cpp  instance.cpp  surface.cpp  swapchain.cpp  window.cpp  winevent.cpp
impls/graphic/: GLdefs.cpp  buffer.cpp  screen.cpp  shader.cpp  text.cpp  window.cpp
impls/io/: image.cpp
impls/util/: debugger.cpp
impls/utils/: CMakeLists.txt  uuid.cpp
include/: Terreate.hpp  context.hpp  event.hpp  exceptions.hpp  executor.hpp  math.hpp  renderer.hpp  resource.hpp  time.hpp  type.hpp  uuid.hpp
include/audio/: ALhelper.hpp  buffer.hpp  context.hpp  dynamic.hpp  source.hpp
include/common/: clock.hpp  common.hpp  constants.hpp  enum.hpp  event.hpp  exception.hpp  executor.hpp  interface.hpp  math.hpp  time.hpp  type.hpp  uuid.hpp
include/component/: component.hpp  controller.hpp  exception.hpp  interface.hpp  mesh.hpp  registry.hpp  transform.hpp
include/core/: IDisposable.hpp  api.hpp  bufferchain.hpp  command.hpp  context.hpp  core.hpp  debugger.hpp  device.hpp  display.hpp  entity.hpp  enum.hpp  event.hpp  exception.hpp  executor.hpp  framebuffer.hpp  instance.hpp  math.hpp  nullable.hpp  object.hpp  pipeline.hpp  property.hpp  queue.hpp  renderpass.hpp  surface.hpp  swapchain.hpp  sync.hpp  type.hpp  uuid.hpp  vk.hpp  vkobj.hpp  window.hpp  winevent.hpp
include/decl/: enum.hpp  exception.hpp  type.hpp
include/graphic/: GLdefs.hpp  buffer.hpp  compute.hpp  converter.hpp  font.hpp  joystick.hpp  screen.hpp  shader.hpp  text.hpp  texture.hpp  window.hpp
include/io/: animation.hpp  audio.hpp  image.hpp  material.hpp  model.hpp  skeleton.hpp
include/io/format/: gltf.hpp  json.hpp
include/module/: opengl.hpp  sdl.hpp
include/module/common/: bitflag.hpp  clock.hpp  enum.hpp  exception.hpp  math.hpp  time.hpp  type.hpp
include/module/component/: interface.hpp
include/module/core/: component.hpp  context.hpp  entity.hpp  exception.hpp
include/opengl/: buffer.hpp  font.hpp  opengl.hpp  screen.hpp
include/resource/: controller.hpp  exception.hpp  interface.hpp  mesh.hpp  registry.hpp  resource.hpp
include/sdl/: camera.hpp  event.hpp  exception.hpp  gamepad.hpp  image.hpp  joystick.hpp  mouse.hpp  registry.hpp  sdl.hpp  window.hpp  winhelper.hpp
include/util/: bitflag.hpp  debugger.hpp  event.hpp  frame.hpp  property.hpp  resourceptr.hpp  uuid.hpp
include/utils/: event.hpp  exception.hpp  math.hpp  time.hpp  type.hpp  uuid.hpp
include/vulkan/: command.hpp  device.hpp  framebuffer.hpp  pipeline.hpp  queue.hpp  renderpass.hpp  surface.hpp  swapchain.hpp  sync.hpp  vk.hpp  vkobj.hpp  window.hpp  winevent.hpp
includes/: Terreate.hpp  bindable.hpp  context.hpp  entity.hpp  exceptions.hpp  font.hpp  primitive.hpp  resource.hpp  scene.hpp  transform.hpp
includes/core/: event.hpp  executor.hpp
includes/graphic/: GLdefs.hpp  buffer.hpp  font.hpp  screen.hpp  shader.hpp  texture.hpp  window.hpp
includes/io/: model.hpp
resources/shaders/: font.glsl  rect.frag.glsl  rect.vert.glsl
test/impl/: CMakeLists.txt  test.cpp
test/include/: test.hpp  test.hpp.bak
tests/impls/: CMakeLists.txt  TerreateTest.cpp  _main.cpp  api.cpp  audiotest.cpp  context.cpp  debug.cpp  debugger.cpp  device.cpp  graphictest.cpp  hubptr.cpp  instance.cpp  main.cpp  pointer.cpp  release.cpp  renderer.cpp  resource.cpp  swapchain.cpp  uuid.cpp  window.cpp
tests/include/: Terreate.hpp  TerreateTest.hpp  _main.hpp  api.hpp  audiotest.hpp  context.hpp  debugger.hpp  device.hpp  enum.hpp  event.hpp  exception.hpp  graphictest.hpp  hubptr.hpp  instance.hpp  interface.hpp  main.hpp  pointer.hpp  property.hpp  renderer.hpp  resource.hpp  swapchain.hpp  time.hpp  type.hpp  uuid.hpp  window.hpp
tests/includes/: TerreateTest.hpp  graphictest.hpp
(+32 files in other folders)
