cmake_minimum_required(VERSION 3.20)
project(Terreate)
option(TERREATE_DEBUG_BUILD "Build with debug flags" ON)
option(TERREATE_BUILD_TEST "Build test" ON)

add_subdirectory(impl)

if(TERREATE_DEBUG_BUILD)
  message(STATUS "Building with debug flags")
  add_compile_options(-g -O0 -Wall -fsanitize=address)
  add_link_options(-fsanitize=address)
  add_compile_definitions(TERREATE_DEBUG_BUILD)
else()
  message(STATUS "Building with release flags")
  add_compile_options(-O3 -Wall)
endif()

if(TERREATE_BUILD_TEST)
  add_subdirectory(tests/impls)
endif()
